{
    "name": "InputMaster",
    "maps": [
        {
            "name": "Player",
            "id": "5ce0e40d-3f47-441f-8350-b38a1bbd0452",
            "actions": [
                {
                    "name": "Walk",
                    "type": "Button",
                    "id": "862f39aa-b267-4706-9b38-0dd4199df073",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Light_Attack",
                    "type": "Button",
                    "id": "ea9df91d-33fd-48dd-a847-ab749109531b",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "861eed13-98e8-42b3-9e07-04ccd008920c",
                    "path": "",
                    "interactions": "",
                    "processors": "",
                    "groups": "Xbox Control Scheme",
                    "action": "Walk",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "1D Axis",
                    "id": "9d72e3e2-dea8-473b-8e8a-8151184358ae",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Walk",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "a53afc90-8e36-40a3-8a1c-c2652852fb54",
                    "path": "<XInputController>/leftStick/left",
                    "interactions": "",
                    "processors": "",
                    "groups": "Xbox Control Scheme",
                    "action": "Walk",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "976ef040-6018-4eb0-84eb-20d7558ec8c2",
                    "path": "<XInputController>/leftStick/right",
                    "interactions": "",
                    "processors": "",
                    "groups": "Xbox Control Scheme",
                    "action": "Walk",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "d95c2f83-9eff-4085-b8cf-7c4fc4bd5f30",
                    "path": "<XInputController>/buttonEast",
                    "interactions": "",
                    "processors": "",
                    "groups": "Xbox Control Scheme",
                    "action": "Light_Attack",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": [
        {
            "name": "Xbox Control Scheme",
            "bindingGroup": "Xbox Control Scheme",
            "devices": [
                {
                    "devicePath": "<XInputController>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        }
    ]
}